# app/node.go
@@ -4,7 +4,7 @@ import (
 	"context"
 	"fmt"
 	"github.com/zoenion/common/conf"
-	registrypb "github.com/zoenion/common/proto/registry"
+	servicepb "github.com/zoenion/common/proto/service"
 	"log"
 )
 
@@ -12,8 +12,8 @@ type Node interface {
 	Configure(cVars *ConfigVars) error
 	Init(vars *Vars) error
 	Start() error
-	RegistryInfo() *registrypb.Application
-	SharedConfigs() chan conf.Map
+	Info() *servicepb.Info
+	ShareState(chan conf.Map)
 	Stop()
 }
 
@@ -39,20 +39,24 @@ func StartNode(node Node, vars *Vars) error {
 	}
 
 	if vars.Registry != "" {
-		if ai := node.RegistryInfo(); ai != nil {
+		if ai := node.Info(); ai != nil {
 			regClient, err := registryClient(vars)
 			if err != nil {
 				return fmt.Errorf("could not connect to registry server: %s", err)
 			}
 
-			rsp, err := regClient.Register(ctx, &registrypb.RegisterRequest{Application: ai})
+			rsp, err := regClient.Register(ctx, &servicepb.RegisterRequest{Service: ai})
 			if err != nil {
 				log.Printf("could not register %s: %s\n", ai.Name, err)
 			} else {
-				vars.RegistryID = rsp.Id
-				log.Printf("%s registered as %s", vars.Name, rsp.Id)
+				vars.RegistryID = rsp.RegistryId
+				log.Printf("%s registered as %s", vars.Name, rsp.RegistryId)
 			}
 		}
+	}
+
+	if vars.ConfigServer != "" {
+
 	}
 	return nil
 }
@@ -63,7 +67,7 @@ func StopNode(node Node, vars *Vars) error {
 		if err != nil {
 			return fmt.Errorf("could not connect to registry server: %s", err)
 		}
-		_, err = regClient.Deregister(context.Background(), &registrypb.DeregisterRequest{Id: vars.RegistryID})
+		_, err = regClient.Deregister(context.Background(), &servicepb.DeregisterRequest{RegistryId: vars.RegistryID})
 		return err
 	}
 	return nil
